--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: node_js
 node_js: "9"
+services: postgresql
 before_script:
   - psql -c 'create database palette_picker_test;' -U postgres
